log
Sat, May 17, 2025  2:43:38 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025  2:46:19 PM: 
 sudoku.c | 111 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 104 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'createNode':
sudoku.c:11:3: error: conversion to non-scalar type requested
   Node* n=(Node) malloc(sizeof(Node));
   ^~~~
sudoku.c: In function 'copy':
sudoku.c:18:12: error: incompatible types when returning type 'Node * {aka struct <anonymous> *}' but 'Node {aka struct <anonymous>}' was expected
     return new;
            ^~~
sudoku.c: In function 'get_adj_nodes':
sudoku.c:112:21: error: incompatible types when initializing type 'Node * {aka struct <anonymous> *}' using type 'Node {aka struct <anonymous>}'
         Node* new = copy(n);
                     ^~~~
sudoku.c: In function 'DFS':
sudoku.c:150:9: error: variable 'adj' has initializer but incomplete type
         List adj = get_adj_nodes(current);
         ^~~~
sudoku.c:150:14: error: storage size of 'adj' isn't known
         List adj = get_adj_nodes(current);
              ^~~
sudoku.c:150:14: error: unused variable 'adj' [-Werror=unused-variable]
sudoku.c: At top level:
sudoku.c:166:1: error: expected identifier or '(' before '/' token
 /int main( int argc, charargv[] ){
 ^
sudoku.c:176:3: error: expected identifier or '(' before '/' token
 }*/
   ^
sudoku.c: In function 'copy':
sudoku.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
4f3a2e7
